# DeclutterApp

./: LICENSE  README.md  config.example.yaml  pyproject.toml
declutter/: __init__.py  __main__.py  config.py  guard.py  organize.py  scan.py  trash.py
