[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "declutter-cli"
version = "0.1.0"
description = "Safe, reversible, cross-platform file organizer with a menu-driven CLI."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "James Garmon"}]
keywords = ["cleanup", "organize", "files", "cli", "declutter", "downloads", "desktop"]
classifiers = [
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = []

[project.optional-dependencies]
# Recommended: real OS Trash/Recycle Bin support and YAML configs.
full = ["send2trash>=1.8", "pyyaml>=6.0"]

[project.scripts]
declutter = "declutter.__main__:main"

[project.urls]
Homepage = "https://github.com/JFcoldharbor/declutter"

[tool.setuptools.packages.find]
include = ["declutter*"]
